# QTsocket5_chat

./: End-to-End Encryption Implementation with X25519 and AES-GCM.md  KCP_chat.py  PyQt5 + X25519 + ChaCha20-Poly1305.py  QT5_socket5_chat.py  README.md  TCP.py  chacha20ploy1305.py  chat_app.py  chat_app_2.py  chat_t.py  handshake_chat_aesgcm.py  new_client and server.py  secure_chat_no_class.py  secure_server and client.py  secure_transfer_ephemeral_server.py  server_client.py  tcp_chat.py  tcp不完善.py  tkinter_socket5_chat.py  wxcrypt_tool.py  x25519+aes.py  基本tcp代理示例.py  客户端服务器一体.py  异步通信.py  支持传送文件和端到端加密通信_全双工通信.py  独立的一个客户端服务器.py  秘密分享算法.py  简单问答机器人.py  系统优化.sh
1/: Client.py  Server.py  aesgcm批量处理.py
rust/: Cargo.toml  why use rust.txt
rust/src/: main.rs
可以传送文件/: Secure File & Text Transfer.py  client.py  rsa_tcp_chat.py  rust版本通信软件开发试验.rs  secure_transfer.py  server.py  x25519_interactive_json.py  客户端服务器一体支持传输文件.py  简单文件夹.py
